# StockBeans

./: .gitignore  CMakeLists.txt  MainReadme.md  config.json  main.cpp  vcpkg.json  vcpkg_script.sh
lib/: readme.md
lib/src/: CMakeLists.txt  corelogger.cpp  databasemanager.cpp  databasemanager.h  helperfunction.cpp  helperfunction.h  logindialog.cpp  logindialog.h  settings.cpp  settings.h  sqlquery.cpp  sqlquery.h
lib/src/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  IDatabase.h  SqlDatabaseWrapper.cpp  SqlDatabaseWrapper.h  SqlQuery.cpp  Types.h  databasemanager.cpp  databasemanager.h
lib/src/ui/: CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  logindialog.cpp  logindialog.h  mainwindow.cpp
lib/src/util/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  CoreLogger.cpp  CoreLogger.h  DatabaseSettings.cpp  DatabaseSettings.h  HelperFunction.cpp  ISettings.h  Settings.cpp  Settings.h  SettingsManager.cpp  SettingsManager.h  corelogger.cpp  corelogger.h  settings.h
scripts/: install-mytools.sh
tests/: CMakeLists.txt  helperfunction_test.cpp  testReadme.md  test_databasemanager.cpp  test_helperfunction.cpp  testmain.cpp
tests/database/: CMakeLists.txt  DatabaseManagerTest.cpp  MockDatabase.h  test_databasemanager.cpp
tests/util/: CMakeLists.txt  HelperFunctionTest.cpp  SettingsManagerTest.cpp  test_helperfunction.cpp
